--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.97 2003-06-10 19:14:12 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.98 2003-06-10 19:22:13 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -649,9 +649,9 @@ small bug in occlusion culling code; better error handling.
 \item[0.9.0] (Jun 2, 2003) Fixed smooth shading detection for mixed
 smooth/flat shaded scenes; new library numbering scheme
 (``major.minor.patch'').
-\item[0.9.1] (Jun 10, 2003) Fixed a couple of bugs for \LaTeX\ output
-(\dd{glRenderMode} not reset to \dd{GL_RENDER}; crash when printing an empty
-scene); set default pixmap bit depth to 8.
+\item[0.9.1] (Jun 10, 2003) Fixed two \LaTeX\ output bugs (\dd{glRenderMode}
+not reset to \dd{GL_RENDER}; crash when printing an empty scene); changed
+default pixmap depth to 8 bits per color component.
 \end{description}
 
 \end{document}
