--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.99 2003-06-10 19:27:38 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.100 2003-06-10 22:12:20 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -560,8 +560,6 @@ implementation;
 %
 \email{Romain Boman}{r_boman@yahoo.fr} for the Windows dll generation;
 %
-\email{Rouben Rostamian}{rostamian@umbc.edu} for various bug fixes;
-%
 \email{Diego Santa Cruz}{Diego.SantaCruz@epfl.ch} for the new optimized
 shaded triangle code and the \dd{shfill} management;
 %
@@ -572,9 +570,8 @@ improvement of \dd{GL2PS_BEST_ROOT};
 \email{Guy Barrand}{barrand@lal.in2p3.fr} for his work on
 \dd{gl2psDrawPixels} and the new viewport management;
 %
-\email{Prabhu Ramachandran}{prabhu@aero.iitm.ernet.in} for various bug
-reports.
-
+\email{Rouben Rostamian}{rostamian@umbc.edu} and \email{Prabhu
+Ramachandran}{prabhu@aero.iitm.ernet.in} for various bug reports and fixes.
 \section{Links}
 \label{sec:links}
 
@@ -650,7 +647,7 @@ small bug in occlusion culling code; better error handling.
 smooth/flat shaded scenes; new library numbering scheme
 (``major.minor.patch'').
 \item[0.9.1] (Jun 10, 2003) Fixed two \dd{GL2PS_TEX} output bugs
-(\dd{glRenderMode} not reset to \dd{GL_RENDER} and crash when printing empty
+(\dd{glRenderMode} not reset to \dd{GL_RENDER} + crash when printing empty
 scene); changed default pixmap depth to 8 bits per color component.
 \end{description}
 
