--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.100 2003-06-10 22:12:20 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.101 2003-06-11 06:56:14 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -648,7 +648,7 @@ smooth/flat shaded scenes; new library numbering scheme
 (``major.minor.patch'').
 \item[0.9.1] (Jun 10, 2003) Fixed two \dd{GL2PS_TEX} output bugs
 (\dd{glRenderMode} not reset to \dd{GL_RENDER} + crash when printing empty
-scene); changed default pixmap depth to 8 bits per color component.
+scenes); changed default pixmap depth to 8 bits per color component.
 \end{description}
 
 \end{document}
