Add new tests for point/line styles + change default linecap/linejoin styles.

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.102 2003-06-11 15:55:15 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.103 2003-06-11 17:39:10 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -648,7 +648,8 @@ smooth/flat shaded scenes; new library numbering scheme
 (``major.minor.patch'').
 \item[0.9.1] (Jun 11, 2003) Fixed two \dd{GL2PS_TEX} output bugs
 (\dd{glRenderMode} not reset to \dd{GL_RENDER} + crash when printing empty
-scenes); changed default pixmap depth to 8 bits per color component.
+scenes); changed default pixmap depth to 8 bits per color component; changed
+default line cap to ``Butt cap'' and default line join to ``Miter join''.
 \end{description}
 
 \end{document}
