--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.108 2003-07-03 21:59:46 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.109 2003-07-04 03:06:56 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -65,10 +65,10 @@
 %%tth: version of the documentation. Older versions are still
 %%tth: available \href{http://www.geuz.org/gl2ps/src/}{here}.
 %%tth: \par
-%%tth: You can subscribe to the
+%%tth: To be notified when a new version of GL2PS is released,
+%%tth: subscribe to the
 %%tth: \href{http://www.geuz.org/mailman/listinfo/gl2ps-announce/}
-%%tth: {gl2ps-announce} mailing list to be notified about new GL2PS
-%%tth: releases.
+%%tth: {gl2ps-announce} mailing list.
 
 \tableofcontents
 
