*** empty log message ***

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.110 2003-07-04 14:11:30 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.111 2003-07-07 15:31:24 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -66,9 +66,9 @@
 %%tth: available \href{http://www.geuz.org/gl2ps/src/}{here}.
 %%tth: \par
 %%tth: To be notified when a new version of GL2PS is released,
-%%tth: subscribe to the
+%%tth: just subscribe to the
 %%tth: \href{http://www.geuz.org/mailman/listinfo/gl2ps-announce/}
-%%tth: {gl2ps-announce} mailing list.
+%%tth: {gl2ps-announce} mailing list!
 
 \tableofcontents
 
