--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.111 2003-07-07 15:31:24 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.112 2003-07-18 17:06:30 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -73,6 +73,9 @@
 \tableofcontents
 
 \section{Introduction}
+
+% GL2PS provides easy and high quality PostScript output for any OpenGL
+% application. 
 
 GL2PS is a library for creating high quality vector output (primarily
 PostScript) from any OpenGL application. The main difference between GL2PS
