add more self-promotion :-)

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.112 2003-07-18 17:06:30 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.113 2003-07-22 18:19:41 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -81,7 +81,9 @@ GL2PS is a library for creating high quality vector output (primarily
 PostScript) from any OpenGL application. The main difference between GL2PS
 and other similar libraries (see section~\ref{sec:links}) is the use of
 sorting algorithms capable of handling intersecting and stretched polygons,
-as well as non manifold objects.
+as well as non manifold objects. GL2PS provides advanced smooth shading and
+text rendering, culling of invisible primitives, mixed vector/bitmap output,
+and much more...
 
 The library, written in C, is released under the GNU Library General Public
 License (see \url{http://www.gnu.org/licenses/lgpl.html} for more details),
