--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.113 2003-07-22 18:19:41 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.114 2003-09-16 19:40:41 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -145,24 +145,24 @@ option is set.
 \item[\dd{GL2PS_PS}] The output stream will be a PostScript file. 
 \item[\dd{GL2PS_EPS}] The output stream will be an Encapsulated PostScript
 file.
+\item[\dd{GL2PS_PDF}] The output stream will be in Portable Document Format
+(PDF).
 \item[\dd{GL2PS_TEX}] The output stream will be a \LaTeX\ file, containing
 only the text strings of the plot (cf.\ section~\ref{sec:gl2psText}), as
 well as an \verb+\includegraphics+ command permitting to include a graphic
 file having the same basename as \dd{filename}.\footnote{The two steps to
 generate a \LaTeX\ plot with GL2PS are thus:
 \begin{enumerate}
-\item generate the PostScript file (e.g.\ \dd{file.ps}) with no text
-strings, using the \dd{GL2PS_PS} or \dd{GL2PS_EPS} format combined with the
-\dd{GL2PS_NO_TEXT} option;
+\item generate the PostScript or PDF file (e.g.\ \dd{file.ps} or
+\dd{file.pdf}) with no text strings, using the \dd{GL2PS_PS}, \dd{GL2PS_EPS}
+or \dd{GL2PS_PDF} format combined with the \dd{GL2PS_NO_TEXT} option;
 \item generate the \LaTeX\ file \dd{file.tex}, using the \dd{GL2PS_TEX}
 format and specifying \dd{file.tex} as the \dd{filename} argument to
 \dd{gl2psBeginPage}.
 \end{enumerate}
 You can of course combine the \LaTeX\ output with other graphic formats than
-PostScript. For example, you may transform \dd{file.ps} into \dd{file.pdf}
-and use pdf\LaTeX\ with the same \dd{file.tex} as for PostScript. You may
-also use a bitmap image (e.g.\ JPEG or PNG) and still combine it with
-\dd{file.tex}.}
+PostScript. For example, you may export a bitmap image in JPEG or PNG format
+and use pdf\LaTeX\ with the same \dd{file.tex} as for PostScript or PDF.}
 \end{description}
 
 \item[\dd{sort}] Specifies the sorting algorithm, chosen among:
@@ -207,6 +207,8 @@ below).
 the output, thus substantially reducing the size of the output file.
 \item[\dd{GL2PS_USE_CURRENT_VIEWPORT}] The current OpenGL viewport is used
 instead of \dd{viewport}.
+\item[\dd{GL2PS_DEFLATE}] The output stream is compressed (currently only
+available with the PDF format).
 \end{description}
 
 \item[\dd{colormode}] Specifies the color mode: \dd{GL_RGBA} or
@@ -683,6 +685,7 @@ scenes); changed default pixmap depth to 8 bits per color component; changed
 default line cap to ``Butt cap'' and default line join to ``Miter join''.
 \item[0.9.2] (Jul 4, 2003) Improved occlusion culling; new
 \dd{GL2PS_USE_CURRENT_VIEWPORT} option.
+\item[0.9.3] (Sep 16, 2003) Native PDF support contributed by Micha Bieber.
 \end{description}
 
 \end{document}
