--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.114 2003-09-16 19:40:41 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.115 2003-09-16 23:55:17 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -49,15 +49,15 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 0.9.2, 4 July 2003}
+\date{Version 1.0.0, 16 September 2003}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is available either as a
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-0.9.2.tar.gz}{tar.gz}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.0.0.tar.gz}{tar.gz}
 %%tth: or as a 
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-0.9.2.zip}{zip}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.0.0.zip}{zip}
 %%tth: archive. These archives contain both a
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{PostScript}
 %%tth: and a
@@ -492,7 +492,8 @@ If you plan to convert the PostScript file into a PDF file you may need to
 disable the use of the Level 3 PostScript \dd{shfill} operator, i.e.\ add
 \dd{GL2PS_NO_PS3_SHADING} to the list of options. Note that you can also
 edit the output file a posteriori (just set \dd{/tryPS3shading} to
-\dd{false} in the PostScript file header).
+\dd{false} in the PostScript file header). The best solution is probably to
+output the file directly in PDF format using \dd{GL2PS_PDF}, though.
 
 A complete example (\dd{gl2psTest.c}) is included in the distribution.
 
@@ -685,7 +686,7 @@ scenes); changed default pixmap depth to 8 bits per color component; changed
 default line cap to ``Butt cap'' and default line join to ``Miter join''.
 \item[0.9.2] (Jul 4, 2003) Improved occlusion culling; new
 \dd{GL2PS_USE_CURRENT_VIEWPORT} option.
-\item[0.9.3] (Sep 16, 2003) Native PDF support contributed by Micha Bieber.
+\item[1.0.0] (Sep 16, 2003) Native PDF support contributed by Micha Bieber.
 \end{description}
 
 \end{document}
