--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.115 2003-09-16 23:55:17 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.116 2003-09-17 07:10:37 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -49,7 +49,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.0.0, 16 September 2003}
+\date{Version 1.0.0, ?? 2003}
 
 \maketitle
 
@@ -78,12 +78,12 @@
 % application. 
 
 GL2PS is a library for creating high quality vector output (primarily
-PostScript) from any OpenGL application. The main difference between GL2PS
-and other similar libraries (see section~\ref{sec:links}) is the use of
-sorting algorithms capable of handling intersecting and stretched polygons,
-as well as non manifold objects. GL2PS provides advanced smooth shading and
-text rendering, culling of invisible primitives, mixed vector/bitmap output,
-and much more...
+PostScript and PDF) from any OpenGL application. The main difference between
+GL2PS and other similar libraries (see section~\ref{sec:links}) is the use
+of sorting algorithms capable of handling intersecting and stretched
+polygons, as well as non manifold objects. GL2PS provides advanced smooth
+shading and text rendering, culling of invisible primitives, mixed
+vector/bitmap output, and much more...
 
 The library, written in C, is released under the GNU Library General Public
 License (see \url{http://www.gnu.org/licenses/lgpl.html} for more details),
@@ -127,111 +127,109 @@ and output to \dd{stream}. The arguments given to \dd{gl2psBeginPage}
 determine the way primitives are handled:
 
 \begin{description}
-\item[\dd{title}]
-Specifies the plot title. For PostScript output, this
-string is placed in the \texttt{\%\%Title} field.
+\item[\dd{title}] Specifies the plot title. For PostScript output, this
+  string is placed in the \texttt{\%\%Title} field.
 
 \item[\dd{producer}] Specifies the plot producer. For PostScript output,
-this string is placed in the \texttt{\%\%For} field.
+  this string is placed in the \texttt{\%\%For} field.
 
 \item[\dd{viewport}] Specifies the plot viewport. The viewport can for
-example be obtained with a call to \dd{glGetIntegerv(GL_VIEWPORT,
-viewport)}. This argument is ignored if the \dd{GL2PS_USE_CURRENT_VIEWPORT}
-option is set.
+  example be obtained with a call to \dd{glGetIntegerv(GL_VIEWPORT,
+  viewport)}. This argument is ignored if the
+  \dd{GL2PS_USE_CURRENT_VIEWPORT} option is set.
 
 \item[\dd{format}] Specifies the output format, chosen among:
 
 \begin{description}
-\item[\dd{GL2PS_PS}] The output stream will be a PostScript file. 
-\item[\dd{GL2PS_EPS}] The output stream will be an Encapsulated PostScript
-file.
-\item[\dd{GL2PS_PDF}] The output stream will be in Portable Document Format
-(PDF).
-\item[\dd{GL2PS_TEX}] The output stream will be a \LaTeX\ file, containing
-only the text strings of the plot (cf.\ section~\ref{sec:gl2psText}), as
-well as an \verb+\includegraphics+ command permitting to include a graphic
-file having the same basename as \dd{filename}.\footnote{The two steps to
-generate a \LaTeX\ plot with GL2PS are thus:
-\begin{enumerate}
-\item generate the PostScript or PDF file (e.g.\ \dd{file.ps} or
-\dd{file.pdf}) with no text strings, using the \dd{GL2PS_PS}, \dd{GL2PS_EPS}
-or \dd{GL2PS_PDF} format combined with the \dd{GL2PS_NO_TEXT} option;
-\item generate the \LaTeX\ file \dd{file.tex}, using the \dd{GL2PS_TEX}
-format and specifying \dd{file.tex} as the \dd{filename} argument to
-\dd{gl2psBeginPage}.
-\end{enumerate}
-You can of course combine the \LaTeX\ output with other graphic formats than
-PostScript. For example, you may export a bitmap image in JPEG or PNG format
-and use pdf\LaTeX\ with the same \dd{file.tex} as for PostScript or PDF.}
+\item[\dd{GL2PS_PS}] The output stream will be in PostScript format. 
+\item[\dd{GL2PS_EPS}] The output stream will be in Encapsulated PostScript
+  format.
+\item[\dd{GL2PS_PDF}] The output stream will be in Portable Document Format.
+\item[\dd{GL2PS_TEX}] The output will be a \LaTeX\ file containing only the
+  text strings of the plot (cf.\ section~\ref{sec:gl2psText}), as well as an
+  \verb+\includegraphics+ command including a graphic file having the same
+  basename as \dd{filename}.\footnote{The two steps to generate a \LaTeX\
+  plot with GL2PS are thus:
+  \begin{enumerate}
+  \item generate the PostScript or PDF file (e.g.\ \dd{file.ps} or
+    \dd{file.pdf}) with no text strings, using the \dd{GL2PS_PS},
+    \dd{GL2PS_EPS} or \dd{GL2PS_PDF} format combined with the
+    \dd{GL2PS_NO_TEXT} option;
+  \item generate the \LaTeX\ file \dd{file.tex}, using the \dd{GL2PS_TEX}
+    format and specifying \dd{file.tex} as the \dd{filename} argument to
+    \dd{gl2psBeginPage}.
+  \end{enumerate}
+  You can of course combine the \LaTeX\ output with other graphic formats
+  than PostScript or PDF. For example, you may export a bitmap image in JPEG
+  or PNG format and use pdf\LaTeX\ with the same \dd{file.tex}.}
 \end{description}
 
 \item[\dd{sort}] Specifies the sorting algorithm, chosen among:
 
 \begin{description}
 \item[\dd{GL2PS_NO_SORT}] The primitives are not sorted, and are output in
-\dd{stream} in the order they appear in the feedback buffer.
+  \dd{stream} in the order they appear in the feedback buffer.
 \item[\dd{GL2PS_SIMPLE_SORT}] The primitives are sorted according to their
-barycenter. This can be sufficient for simple scenes.
+  barycenter. This can be sufficient for simple scenes.
 \item[\dd{GL2PS_BSP_SORT}] The primitives are inserted in a Binary Space
-Partition (BSP) tree. The tree is then traversed back to front in a
-painter-like algorithm. This should be used for complex three-dimensional
-scenes, but keep in mind that the BSP tree algorithm is quite memory
-hungry...
+  Partition (BSP) tree. The tree is then traversed back to front in a
+  painter-like algorithm.
 \end{description}
 
 \item[\dd{options}] Sets global plot options, chosen among (multiple options
-can be combined with the bitwise inclusive OR symbol \dd{|}):
+  can be combined with the bitwise inclusive OR symbol \dd{|}):
 
 \begin{description}
 \item[\dd{GL2PS_NONE}] No option.
 \item[\dd{GL2PS_DRAW_BACKGROUND}] The background frame is drawn.
 \item[\dd{GL2PS_SIMPLE_LINE_OFFSET}] A small offset is added in the z-buffer
-to all the lines in the plot. This is a simplified version of the
-\dd{GL2PS_POLYGON_OFFSET_FILL} functionality
-(cf. section~\ref{sec:gl2psEnable}), putting all the lines of the rendered
-image slightly in front of their actual position. This thus performs a
-simple anti-aliasing solution, e.g. for finite element like meshes.
+  to all the lines in the plot. This is a simplified version of the
+  \dd{GL2PS_POLYGON_OFFSET_FILL} functionality
+  (cf. section~\ref{sec:gl2psEnable}), putting all the lines of the rendered
+  image slightly in front of their actual position. This thus performs a
+  simple anti-aliasing solution, e.g. for finite element like meshes.
 \item[\dd{GL2PS_SILENT}] All the messages written by GL2PS on the error
-stream are suppressed.
+  stream are suppressed.
 \item[\dd{GL2PS_BEST_ROOT}] The construction of the BSP tree is optimized by
-choosing the root primitives leading to the minimum number of splits.
+  choosing the root primitives leading to the minimum number of splits.
 \item[\dd{GL2PS_NO_TEXT}] All the text strings are suppressed from
-output. This is useful to produce the image part of a \LaTeX\ output.
+  output. This is useful to produce the image part of a \LaTeX\ output.
 \item[\dd{GL2PS_NO_PIXMAP}] All the pixmaps are suppressed from output.
 \item[\dd{GL2PS_LANDSCAPE}] Landscape orientation instead of portrait.
-\item[\dd{GL2PS_NO_PS3_SHADING}] No use is made of the \dd{shfill}
-PostScript level 3 operator (which can lead to problems when converting
-PostScript files to PDF files; see also options \dd{nr}, \dd{ng}, \dd{nb}
-below).
+\item[\dd{GL2PS_NO_PS3_SHADING}] (for PostScript output only) No use is made
+  of the \dd{shfill} PostScript level 3 operator (which can lead to problems
+  when converting PostScript files to PDF files, instead of generating PDF
+  files directly with GL2PS; see also options \dd{nr}, \dd{ng}, \dd{nb}
+  below).
 \item[\dd{GL2PS_OCCLUSION_CULL}] All the hidden polygons are removed from
-the output, thus substantially reducing the size of the output file.
+  the output, thus substantially reducing the size of the output file.
 \item[\dd{GL2PS_USE_CURRENT_VIEWPORT}] The current OpenGL viewport is used
-instead of \dd{viewport}.
-\item[\dd{GL2PS_DEFLATE}] The output stream is compressed (currently only
-available with the PDF format).
+  instead of \dd{viewport}.
+%\item[\dd{GL2PS_DEFLATE}] The output stream is compressed (currently only
+%  available with the PDF format).
 \end{description}
 
 \item[\dd{colormode}] Specifies the color mode: \dd{GL_RGBA} or
-\dd{GL_COLOR_INDEX}.
-\item[\dd{colorsize}] Specifies the size of the colormap if \dd{colormode} is
-\dd{GL_COLOR_INDEX}.
+  \dd{GL_COLOR_INDEX}.
+\item[\dd{colorsize}] Specifies the size of the colormap if \dd{colormode}
+  is \dd{GL_COLOR_INDEX}.
 \item[\dd{colortable}] Contains the colormap if \dd{colormode} is
-\dd{GL_COLOR_INDEX}. This colormap must contain \dd{colorsize} elements of type
-\dd{GL2PSrgba}.
-\item[\dd{nr}, \dd{ng}, \dd{nb}] Control the number flat-shaded
-(sub-)triangles used to approximate a smooth-shaded triangle when the
-\dd{shfill} operator is not supported by the system, or when the
-\dd{GL2PS_NO_PS3_SHADING} option is set. The arguments \dd{nr}, \dd{ng} and
-\dd{nb} specify the number of values used for interpolating the full range
-of red, green and blue color components; that is, a triangle is recursively
-subdivided until the color difference between two of its vertices is smaller
-that $1/\mathtt{nr}$ for the red component, $1/\mathtt{ng}$ for the green
-component and $1/\mathtt{nb}$ for the blue component. If the arguments are
-set to zero, default values are used.
+  \dd{GL_COLOR_INDEX}. This colormap must contain \dd{colorsize} elements of
+  type \dd{GL2PSrgba}.
+\item[\dd{nr}, \dd{ng}, \dd{nb}] (for PostScript output only) Controls the
+  number flat-shaded (sub-)triangles used to approximate a smooth-shaded
+  triangle when the \dd{shfill} operator is not supported by the system, or
+  when the \dd{GL2PS_NO_PS3_SHADING} option is set. The arguments \dd{nr},
+  \dd{ng} and \dd{nb} specify the number of values used for interpolating
+  the full range of red, green and blue color components; that is, a
+  triangle is recursively subdivided until the color difference between two
+  of its vertices is smaller that $1/\mathtt{nr}$ for the red component,
+  $1/\mathtt{ng}$ for the green component and $1/\mathtt{nb}$ for the blue
+  component. If the arguments are set to zero, default values are used.
 \item[\dd{buffersize}] Specifies the size of the feedback buffer.
 \item[\dd{stream}] Specifies the stream to which data is printed.
 \item[\dd{filename}] Specifies a name for the stream to which data is
-printed.
+  printed.
 \end{description}
 
 \subsubsection{Return value}
@@ -267,19 +265,18 @@ GLint gl2psText( const char *string, const char *fontname,
 
 \subsubsection{Description and arguments}
 
-\dd{gl2psText} permits to include text in the PostScript or \LaTeX\ output
-in a very simple way. The text is inserted at the current raster position
-(set by one of the \dd{glRasterPos} OpenGL commands). Beware that text will
-be sorted according to the position of the leftmost element of the string
-only. The arguments are:
+\dd{gl2psText} permits to include text in the PostScript, PDF or \LaTeX\
+output in a very simple way. The text is inserted at the current raster
+position (set by one of the \dd{glRasterPos} OpenGL commands). Beware that
+text will be sorted according to the position of the leftmost element of the
+string only. The arguments are:
 
 \begin{description}
 \item[\dd{string}] Specifies the text string to print.
 \item[\dd{fontname}] Specifies the name of a valid PostScript font (for
-example \dd{"Times"} or \dd{"HelveticaBoldItalic"}). This has no influence
-for \LaTeX\ output.
-\item[\dd{fontsize}] Specifies the size of the font. This has no influence
-for \LaTeX\ output.
+  example \dd{"Times"} or \dd{"HelveticaBoldItalic"}). This has currently no
+  influence for \LaTeX\ and PDF output.
+\item[\dd{fontsize}] Specifies the size of the font.
 \end{description}
 
 \subsubsection{Return value}
@@ -309,10 +306,10 @@ GLint gl2psDrawPixels( GLsizei width, GLsizei height,
 \subsubsection{Description and arguments}
 
 \dd{gl2psDrawPixels} emulates the \dd{glDrawPixels} function, i.e.\ permits
-to include bitmap images in the PostScript output. The image is inserted at
-the current raster position (set by one of the \dd{glRasterPos} OpenGL
-commands). Beware that the image will be sorted according to the position of
-the current raster position only. The arguments are:
+to include bitmap images in the PostScript or PDF output. The image is
+inserted at the current raster position (set by one of the \dd{glRasterPos}
+OpenGL commands). Beware that the image will be sorted according to the
+position of the current raster position only. The arguments are:
 
 \begin{description}
 \item[\dd{width}] Specifies the width of the image.
@@ -493,7 +490,8 @@ disable the use of the Level 3 PostScript \dd{shfill} operator, i.e.\ add
 \dd{GL2PS_NO_PS3_SHADING} to the list of options. Note that you can also
 edit the output file a posteriori (just set \dd{/tryPS3shading} to
 \dd{false} in the PostScript file header). The best solution is probably to
-output the file directly in PDF format using \dd{GL2PS_PDF}, though.
+output the file directly in PDF format, though, replacing \dd{GL2PS_EPS}
+with \dd{GL2PS_PDF} in the \dd{gl2psBeginPage()} function call above.
 
 A complete example (\dd{gl2psTest.c}) is included in the distribution.
 
@@ -524,8 +522,8 @@ replace bitmap images. They just offer an alternative when high quality
 change the scale, the labels or the colors in a bitmap picture long after
 the picture was produced, and without altering its quality?) are important.
 \item
-Transparency is not supported yet. See the \dd{TODO} file for an explanation
-why this may or may not actually be possible.
+Transparency is not supported yet, though we plan to support it eventually
+for PDF output. See the \dd{TODO} file for a more detailed discussion.
 \item
 GL2PS does not support textures, fog effects, etc.
 \end{itemize}
@@ -605,7 +603,10 @@ improvement of \dd{GL2PS_BEST_ROOT};
 \dd{gl2psDrawPixels} and the new viewport management;
 %
 \email{Rouben Rostamian}{rostamian@umbc.edu} and \email{Prabhu
-Ramachandran}{prabhu@aero.iitm.ernet.in} for various bug reports and fixes.
+Ramachandran}{prabhu@aero.iitm.ernet.in} for various bug reports and fixes;
+%
+\email{Micha Bieber}{bieber@traits.de} for the PDF code.
+
 \section{Links}
 \label{sec:links}
 
@@ -686,7 +687,7 @@ scenes); changed default pixmap depth to 8 bits per color component; changed
 default line cap to ``Butt cap'' and default line join to ``Miter join''.
 \item[0.9.2] (Jul 4, 2003) Improved occlusion culling; new
 \dd{GL2PS_USE_CURRENT_VIEWPORT} option.
-\item[1.0.0] (Sep 16, 2003) Native PDF support contributed by Micha Bieber.
+\item[1.0.0] (??, 2003) Native PDF support contributed by Micha Bieber.
 \end{description}
 
 \end{document}
