--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.119 2003-09-19 17:30:32 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.120 2003-09-22 07:22:54 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine <geuz@geuz.org>
@@ -71,11 +71,8 @@
 
 \section{Introduction}
 
-% GL2PS provides easy and high quality PostScript output for any OpenGL
-% application. 
-
-GL2PS is a library for creating high quality vector output (primarily
-PostScript and PDF) from any OpenGL application. The main difference between
+GL2PS is a library providing high quality vector output (primarily
+PostScript and PDF) for any OpenGL application. The main difference between
 GL2PS and other similar libraries (see section~\ref{sec:links}) is the use
 of sorting algorithms capable of handling intersecting and stretched
 polygons, as well as non manifold objects. GL2PS provides advanced smooth
