--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.121 2003-09-22 17:06:38 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.122 2003-09-24 17:20:22 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine <geuz@geuz.org>
@@ -162,7 +162,7 @@ determine the way primitives are handled:
     \dd{gl2psBeginPage}.
   \end{enumerate}
   You can of course combine the \LaTeX\ output with other graphic formats
-  than PostScript or PDF. For example, you may export a bitmap image in JPEG
+  than PostScript or PDF. For example, you could export an image in JPEG
   or PNG format and use pdf\LaTeX\ with the same \dd{file.tex}.}
 \end{description}
 
