--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.126 2003-10-25 02:12:59 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.127 2003-10-25 02:21:07 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine <geuz@geuz.org>
@@ -214,9 +214,9 @@ determine the way primitives are handled:
 \item[\dd{GL2PS_USE_CURRENT_VIEWPORT}] The current OpenGL viewport is used
   instead of \dd{viewport}.
 \item[\dd{GL2PS_COMPRESS}] The PDF output stream is compressed. You need to
-  compile GL2PS with \dd{HAVE_ZLIB} defined and link the executable with the
-  zlib library (\url{http://www.gzip.org/zlib/}) for this option to take
-  effect.
+  compile GL2PS with \dd{HAVE_ZLIB}, \dd{HAVE_LIBZ} or \dd{GL2PS_HAVE_ZLIB}
+  defined and link the executable with the zlib library
+  (\url{http://www.gzip.org/zlib/}) for this option to take effect.
 \end{description}
 
 \item[\dd{colormode}] Specifies the color mode: \dd{GL_RGBA} or
