--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.127 2003-10-25 02:21:07 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.128 2003-10-25 03:35:31 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine <geuz@geuz.org>
@@ -46,15 +46,15 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.0.0, 24 September 2003}
+\date{Version 1.0.1, 24 October 2003}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is available either as a
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.0.0.tar.gz}{tar.gz}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.0.1.tar.gz}{tar.gz}
 %%tth: or as a 
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.0.0.zip}{zip}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.0.1.zip}{zip}
 %%tth: archive. These archives contain both a
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{PostScript}
 %%tth: and a
@@ -687,8 +687,9 @@ default line cap to ``Butt cap'' and default line join to ``Miter join''.
 \dd{GL2PS_USE_CURRENT_VIEWPORT} option.
 \item[1.0.0] (Sep 24, 2003) Native PDF support contributed by Micha Bieber.
 \end{description}
-\item[1.0.1] (?, 2003) Added an exception to the license to allow for static
-linking (in closed-source projects).
+\item[1.0.1] (Oct ?, 2003) Added an exception to the license to allow for static
+linking (in closed-source projects); new \dd{GL2PS_COMPRESS} option to
+output compressed PDF files.
 \end{description}
 
 \end{document}
