--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.129 2003-10-25 03:36:17 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.130 2003-10-25 08:36:32 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine <geuz@geuz.org>
@@ -213,7 +213,7 @@ determine the way primitives are handled:
   the output, thus substantially reducing the size of the output file.
 \item[\dd{GL2PS_USE_CURRENT_VIEWPORT}] The current OpenGL viewport is used
   instead of \dd{viewport}.
-\item[\dd{GL2PS_COMPRESS}] The PDF output stream is compressed. You need to
+\item[\dd{GL2PS_COMPRESS}] The output stream is compressed. You need to
   compile GL2PS with \dd{HAVE_ZLIB}, \dd{HAVE_LIBZ} or \dd{GL2PS_HAVE_ZLIB}
   defined and link the executable with the zlib library
   (\url{http://www.gzip.org/zlib/}) for this option to take effect.
@@ -688,7 +688,7 @@ default line cap to ``Butt cap'' and default line join to ``Miter join''.
 \item[1.0.0] (Sep 24, 2003) Native PDF support contributed by Micha Bieber.
 \item[1.0.1] (Oct ?, 2003) Added an exception to the license to allow for static
 linking (in closed-source projects); new \dd{GL2PS_COMPRESS} option to
-output compressed PDF files.
+output compressed PDF and PostScript files.
 \end{description}
 
 \end{document}
