--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.130 2003-10-25 08:36:32 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.131 2003-10-25 08:38:19 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine <geuz@geuz.org>
@@ -46,15 +46,15 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.0.1, 24 October 2003}
+\date{Version 1.0.2, ? October 2003}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is available either as a
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.0.1.tar.gz}{tar.gz}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.0.2.tar.gz}{tar.gz}
 %%tth: or as a 
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.0.1.zip}{zip}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.0.2.zip}{zip}
 %%tth: archive. These archives contain both a
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{PostScript}
 %%tth: and a
@@ -686,9 +686,10 @@ default line cap to ``Butt cap'' and default line join to ``Miter join''.
 \item[0.9.2] (Jul 4, 2003) Improved occlusion culling; new
 \dd{GL2PS_USE_CURRENT_VIEWPORT} option.
 \item[1.0.0] (Sep 24, 2003) Native PDF support contributed by Micha Bieber.
-\item[1.0.1] (Oct ?, 2003) Added an exception to the license to allow for static
+\item[1.0.1] (Oct 24, 2003) Added an exception to the license to allow for static
 linking (in closed-source projects); new \dd{GL2PS_COMPRESS} option to
-output compressed PDF and PostScript files.
+output compressed PDF files.
+\item[1.0.2] (Oct ?, 2003) added support for compressed PostScript output.
 \end{description}
 
 \end{document}
