--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.132 2003-10-28 05:41:50 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.133 2003-10-28 06:23:36 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -6,7 +6,7 @@
 %  This program is free software; you can redistribute it and/or
 %  modify it under the terms of either:
 % 
-%  a) the GNU Libary General Public License as published by the Free
+%  a) the GNU Library General Public License as published by the Free
 %  Software Foundation; either version 2 of the Licnese, or (at your
 %  option) any later version, or
 % 
