--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.135 2003-10-28 07:15:01 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.136 2003-10-28 07:23:06 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -337,12 +337,12 @@ position of the current raster position only. The arguments are:
 \item[\dd{width}] Specifies the width of the image.
 \item[\dd{height}] Specifies the height of the image.
 \item[\dd{xorig}, \dd{yorig}] Specify the location of the origin in the
-image.  The origin is measured from the lower left corner of the image, with
-right and up being the positive axes.
+  image.  The origin is measured from the lower left corner of the image,
+  with right and up being the positive axes.
 \item[\dd{format}] Specifies the format of the pixel data. The symbolic
-constant \dd{GL_RGB} is the only one accepted at the moment.
+  constant \dd{GL_RGB} is the only one accepted at the moment.
 \item[\dd{type}] Specifies the data type for pixels. The symbolic constant
-\dd{GL_FLOAT} is the only one accepted at the moment.
+  \dd{GL_FLOAT} is the only one accepted at the moment.
 \item[\dd{pixels}] Specifies a pointer to the pixel data.
 \end{description}
 
@@ -351,7 +351,7 @@ constant \dd{GL_RGB} is the only one accepted at the moment.
 \dd{gl2psDrawPixels} returns:
 \begin{description}
 \item[\dd{GL2PS_UNINITIALIZED}] if \dd{pixels} is \dd{NULL} or if the
-library is not initialized;
+  library is not initialized;
 \item[\dd{GL2PS_ERROR}] if an error occurred;
 \item[\dd{GL2PS_SUCCESS}] otherwise.
 \end{description}
@@ -378,12 +378,12 @@ GLint gl2psDisable( GLint mode )
 
 \begin{description}
 \item[\dd{GL2PS_POLYGON_OFFSET_FILL}] Tries to emulate the
-\dd{GL_POLYGON_OFFSET_FILL} functionality. The value of the offset is taken as
-the current value of the corresponding OpenGL offset (set with
-\dd{glPolygonOffset}). Not fully functional yet.
+  \dd{GL_POLYGON_OFFSET_FILL} functionality. The value of the offset is
+  taken as the current value of the corresponding OpenGL offset (set with
+  \dd{glPolygonOffset}). Not fully functional yet.
 \item[\dd{GL2PS_POLYGON_BOUNDARY}] Not implemented yet.
 \item[\dd{GL2PS_LINE_STIPPLE}] Tries to emulate the \dd{GL_LINE_STIPPLE}
-functionality.
+  functionality.
 \end{description}
 
 \subsubsection{Return value}
@@ -462,9 +462,9 @@ call to \dd{glGetIntegerv(GL_VIEWPORT, viewport)}).
 \begin{description}
 \item[\dd{GL2PS_NO_FEEDBACK}] if the feedback buffer is empty;
 \item[\dd{GL2PS_OVERFLOW}] if the size of the feedback buffer given to
-\dd{gl2psBeginPage} is not large enough;
+  \dd{gl2psBeginPage} is not large enough;
 \item[\dd{GL2PS_UNINITIALIZED}] if \dd{gl2psEndViewport} is called when the
-library is not initialized;
+  library is not initialized;
 \item[\dd{GL2PS_ERROR}] if an error occurred;
 \item[\dd{GL2PS_SUCCESS}] otherwise.
 \end{description}
@@ -633,69 +633,70 @@ product does not seem to be available anymore).
 \begin{description}
 \item[0.1] (Feb 12, 2000) First distributed version.
 \item[0.2] (Feb 20, 2000) Added \dd{GL2PS_POLYGON_BOUNDARY} and
-\dd{GL2PS_BEST_ROOT}. API change: changed arguments of \dd{gl2psBeginPage}
-and \dd{gl2psText}. Corrected some memory allocation stuff. First version of
-this user's guide.
+  \dd{GL2PS_BEST_ROOT}. API change: changed arguments of \dd{gl2psBeginPage}
+  and \dd{gl2psText}. Corrected some memory allocation stuff. First version
+  of this user's guide.
 \item[0.21] (Mar 16, 2000) Initialization fixes.
 \item[0.3] (Jul 29, 2000) Code cleanup. Added \dd{GL2PS_LINE_STIPPLE}.
 \item[0.31] (Aug 14, 2000) Better handling of erroneous primitives.
 \item[0.32] (May 23, 2001) Fixed memory leaks.
 \item[0.4] (Jun 12, 2001) Added \dd{gl2psPointSize} and
-\dd{gl2psLineWidth}. Some code cleanup to allow easier generation of vector
-file formats other than postscript.
-\item[0.41] (Aug 6, 2001) Fixed string allocation (1 char too
-short). Set smaller default line width.
+  \dd{gl2psLineWidth}. Some code cleanup to allow easier generation of
+  vector file formats other than postscript.
+\item[0.41] (Aug 6, 2001) Fixed string allocation (1 char too short). Set
+  smaller default line width.
 \item[0.42] (Oct 8, 2001) Optimization of output file size. PostScript
-header cleanup. Better line width computation.
+  header cleanup. Better line width computation.
 \item[0.5] (Nov 19, 2001) API change: new \dd{format} and \dd{filename}
-arguments for \dd{gl2psBeginPage}. Better PostScript handling of smooth
-shaded primitives. Fix handling of zero-length strings. New options for
-\LaTeX\ output. Changed (again) the line width computation.
+  arguments for \dd{gl2psBeginPage}. Better PostScript handling of smooth
+  shaded primitives. Fix handling of zero-length strings. New options for
+  \LaTeX\ output. Changed (again) the line width computation.
 \item[0.51] (Jan 22, 2002) Fixed erroneous drawing of text primitives lying
-outside the viewport.
+  outside the viewport.
 \item[0.52] (Feb 14, 2002) New \dd{GL2PS_LANDSCAPE} option.
 \item[0.53] (Mar 11, 2002) New \dd{GL2PSDLL} compilation flag to allow the
-generation of a Windows dll.
+  generation of a Windows dll.
 \item[0.6] (Jun 4, 2002) Fixed some incoherences in string allocation; fixed
-sorting of text objects; removed (non functional) occlusion culling code;
-fixed handling of color and line width attributes when gl2ps was called
-multiple times inside the same program.
+  sorting of text objects; removed (non functional) occlusion culling code;
+  fixed handling of color and line width attributes when gl2ps was called
+  multiple times inside the same program.
 \item[0.61] (Jun 21, 2002) Fixed the fix for the sorting of text objects;
-introduced tolerance for floating point comparisons.
+  introduced tolerance for floating point comparisons.
 \item[0.62] (Sep 6, 2002) New \dd{GL2PS_EPS} option to produce Encapsulated
-PostScript files; optimized drawing of shaded primitives; new
-\dd{GL2PS_NO_PS3_SHADING} option and \dd{gl2psNumShadeColors} function to
-control the use of the PostScript level 3 \dd{shfill} operator (usually not
-well handled when converting to PDF).
+  PostScript files; optimized drawing of shaded primitives; new
+  \dd{GL2PS_NO_PS3_SHADING} option and \dd{gl2psNumShadeColors} function to
+  control the use of the PostScript level 3 \dd{shfill} operator (usually
+  not well handled when converting to PDF).
 \item[0.63] (Nov 12, 2002) Changed \dd{GLvoid} to \dd{void} to accommodate
-some SUN compilers; made subdivision parameters modifiable a posteriori in
-the output file; revised documentation.
+  some SUN compilers; made subdivision parameters modifiable a posteriori in
+  the output file; revised documentation.
 \item[0.7] (Dec 11, 2002) Occlusion culling (\dd{GL2PS_OCCLUSION_CULL}) is
-(finally!) working thanks to the great work of Shahzad Muzaffar; enhanced
-\dd{GL2PS_BEST_ROOT}.
+  (finally!) working thanks to the great work of Shahzad Muzaffar; enhanced
+  \dd{GL2PS_BEST_ROOT}.
 \item[0.71] (Dec 13, 2002) Removed C++ style comments inadvertently left in
-the code; added example program \dd{gl2psTest.c} to the distribution.
+  the code; added example program \dd{gl2psTest.c} to the distribution.
 \item[0.72] (Jan 21, 2003) Fixed crash in occlusion culling code; enhanced
-documentation.
+  documentation.
 \item[0.73] (Jan 30, 2003) Minor code cleanup.
 \item[0.8] (Mar 10, 2003) API change: \dd{gl2psNumShadeColors} has been
-removed and the color subdivision parameters \dd{nr}, \dd{ng} and \dd{nb}
-are now given as arguments to \dd{gl2psBeginPage}; API change:
-\dd{gl2psBeginPage} takes an additional argument (\dd{viewport}) to specify
-the print viewport; new \dd{gl2psDrawPixels} interface to produce mixed mode
-PostScript/bitmap output; new \dd{gl2psBeginViewport} and
-\dd{gl2psEndViewport} interface to handle multiple OpenGL viewports; fixed
-small bug in occlusion culling code; better error handling.
+  removed and the color subdivision parameters \dd{nr}, \dd{ng} and \dd{nb}
+  are now given as arguments to \dd{gl2psBeginPage}; API change:
+  \dd{gl2psBeginPage} takes an additional argument (\dd{viewport}) to
+  specify the print viewport; new \dd{gl2psDrawPixels} interface to produce
+  mixed mode PostScript/bitmap output; new \dd{gl2psBeginViewport} and
+  \dd{gl2psEndViewport} interface to handle multiple OpenGL viewports; fixed
+  small bug in occlusion culling code; better error handling.
 \item[0.81] (Mar 22, 2003) Fixed small typos in comments and documentation.
 \item[0.9.0] (Jun 2, 2003) Fixed smooth shading detection for mixed
-smooth/flat shaded scenes; new library numbering scheme
-(``major.minor.patch'').
+  smooth/flat shaded scenes; new library numbering scheme
+  (``major.minor.patch'').
 \item[0.9.1] (Jun 12, 2003) Fixed two \dd{GL2PS_TEX} output bugs
-(\dd{glRenderMode} not reset to \dd{GL_RENDER} + crash when printing empty
-scenes); changed default pixmap depth to 8 bits per color component; changed
-default line cap to ``Butt cap'' and default line join to ``Miter join''.
+  (\dd{glRenderMode} not reset to \dd{GL_RENDER} + crash when printing empty
+  scenes); changed default pixmap depth to 8 bits per color component;
+  changed default line cap to ``Butt cap'' and default line join to ``Miter
+  join''.
 \item[0.9.2] (Jul 4, 2003) Improved occlusion culling; new
-\dd{GL2PS_USE_CURRENT_VIEWPORT} option.
+  \dd{GL2PS_USE_CURRENT_VIEWPORT} option.
 \item[1.0.0] (Sep 24, 2003) Native PDF support contributed by Micha Bieber.
 \item[1.1.0] (Oct 28, 2003) new \dd{GL2PS_COMPRESS} option to output
   compressed PostScript and PDF files; new alternative license (see
