--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.136 2003-10-28 07:23:06 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.137 2003-10-29 23:53:26 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -44,7 +44,7 @@
     /Title (GL2PS: an OpenGL to PostScript printing library)
     /Author (Christophe Geuzaine)
     /Subject (Documentation)
-    /Keywords (OpenGL, PostScript, Printing)
+    /Keywords (OpenGL, PostScript, PDF, Printing)
   } 
 \fi
 
