Advertise the gl2ps mailing list

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.141 2003-11-06 21:41:40 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.142 2003-11-06 21:57:36 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -28,7 +28,8 @@
 %  library in the file named "COPYING.GL2PS"; if not, I will be glad
 %  to provide one.
 % 
-%  For the latest info about gl2ps, see http://www.geuz.org/gl2ps/
+%  For the latest info about gl2ps, see http://www.geuz.org/gl2ps/.
+%  Please report all bugs and problems to "gl2ps@geuz.org".
 
 \documentclass[10pt]{article}
 
@@ -72,12 +73,14 @@
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.pdf}{PDF}
 %%tth: version of the documentation. Older versions are still
 %%tth: available \href{http://www.geuz.org/gl2ps/src/}{here}.
-
 %%tth: \par
-%%tth: (You can subscribe to the
+%%tth: For questions and discussions about GL2PS features, 
+%%tth: resources, bugs, and so forth, see the
+%%tth: \href{http://www.geuz.org/mailman/listinfo/gl2ps/}
+%%tth: {gl2ps} mailing list. You can also subscribe to the
 %%tth: \href{http://www.geuz.org/mailman/listinfo/gl2ps-announce/}
 %%tth: {gl2ps-announce} mailing list to be notified each time a
-%%tth: new version of GL2PS is released.)
+%%tth: new version of GL2PS is released.
 
 \tableofcontents
 
@@ -103,7 +106,7 @@ GL2PS is available at \url{http://www.geuz.org/gl2ps/} and is released under
 the GNU Library General Public License (see \dd{COPYING.LGPL}). GL2PS can
 also be used under an alternative license that allows for static linking
 (see \dd{COPYING.GL2PS}). Any corrections, questions or suggestions should
-be e-mailed to \email{geuz@geuz.org}{geuz@geuz.org}.
+be e-mailed to the GL2PS mailing list \email{gl2ps@geuz.org}{gl2ps@geuz.org}.
 
 The interface consists of ten functions, all beginning with the prefix
 \dd{gl2ps}. All the data structures and the symbolic constants peculiar to
