clarify font selection

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.142 2003-11-06 21:57:36 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.143 2003-11-06 23:54:49 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -299,8 +299,8 @@ string only. The arguments are:
 \begin{description}
 \item[\dd{string}] Specifies the text string to print.
 \item[\dd{fontname}] Specifies the name of a valid PostScript font (for
-  example \dd{"Times"} or \dd{"HelveticaBoldItalic"}). This has currently no
-  influence for \LaTeX\ and PDF output.
+  example \dd{"TimesNewRoman"} or \dd{"Helvetica-Bold"}). This has no
+  effect on the \LaTeX\ output.
 \item[\dd{fontsize}] Specifies the size of the font.
 \end{description}
 
