--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.145 2003-11-08 01:14:23 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.146 2003-11-08 02:21:46 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -29,7 +29,7 @@
 %  to provide one.
 % 
 %  For the latest info about gl2ps, see http://www.geuz.org/gl2ps/.
-%  Please report all bugs and problems to "gl2ps@geuz.org".
+%  Please report all bugs and problems to <gl2ps@geuz.org>.
 
 \documentclass[10pt]{article}
 
