--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.146 2003-11-08 02:21:46 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.147 2003-11-09 05:19:14 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -635,9 +635,9 @@ Ramachandran}{prabhu@aero.iitm.ernet.in} for various bug reports and fixes;
 
 Projects similar to \dd{GL2PS} include: Mark J. Kilgard's rendereps
 (\url{http://www.opengl.org/developers/code/mjktips/Feedback.html}); Michael
-Sweet's GLP library (\url{http://www.easysw.com/~mike/opengl/index.html});
-the GLpr library from CEI international (\url{http://www.ceintl.com/}; this
-product does not seem to be available anymore).
+Sweet's GLP library (\url{http://www.easysw.com/~mike/opengl/}); the GLpr
+library from CEI international (\url{http://www.ceintl.com/}; this product
+does not seem to be available anymore).
 
 \email{Toby White}{tow@sdf.lonestar.org} maintains a Python wrapper for
 \dd{GL2PS}, available at \url{http://tow.freeshell.org/software.html}.
