--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.147 2003-11-09 05:19:14 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.148 2003-11-10 01:02:36 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -58,15 +58,15 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.1.0, 4 November 2003}
+\date{Version 1.1.1, 9 November 2003}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is available either as a
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.1.0.tar.gz}{tar.gz}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.1.1.tar.gz}{tar.gz}
 %%tth: or as a 
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.1.0.zip}{zip}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.1.1.zip}{zip}
 %%tth: archive. These archives contain both a
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{PostScript}
 %%tth: and a
@@ -716,7 +716,8 @@ does not seem to be available anymore).
   compressed PostScript and PDF files; fixed small bug in the PDF output
   that prevented the PDF files to be correctly included in \LaTeX\
   documents; new alternative license (see \dd{COPYING.GL2PS}).
-\item[1.1.1] (Nov??, 2003) Documentation update.
+\item[1.1.1] (Nov 9, 2003) Small memory optimization; documentation update
+  (binary files, fonts).
 \end{description}
 
 \end{document}
