--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.149 2003-11-13 08:26:22 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.150 2003-11-15 05:20:18 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -58,15 +58,15 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.1.1, 9 November 2003}
+\date{Version 1.1.2, ? November 2003}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is available either as a
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.1.1.tar.gz}{tar.gz}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.1.2.tar.gz}{tar.gz}
 %%tth: or as a 
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.1.1.zip}{zip}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-1.1.2.zip}{zip}
 %%tth: archive. These archives contain both a
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{PostScript}
 %%tth: and a
@@ -721,6 +721,7 @@ does not seem to be available anymore).
   documents; new alternative license (see \dd{COPYING.GL2PS}).
 \item[1.1.1] (Nov 9, 2003) Small memory optimization; documentation update
   (binary files, fonts).
+\item[1.1.2] (Nov ?, 2003) Fixed various compiler warnings.
 \end{description}
 
 \end{document}
