--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.150 2003-11-15 05:20:18 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.151 2003-11-16 07:08:20 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -58,7 +58,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 1.1.2, ? November 2003}
+\date{Version 1.1.2, 16 November 2003}
 
 \maketitle
 
@@ -721,7 +721,7 @@ does not seem to be available anymore).
   documents; new alternative license (see \dd{COPYING.GL2PS}).
 \item[1.1.1] (Nov 9, 2003) Small memory optimization; documentation update
   (binary files, fonts).
-\item[1.1.2] (Nov ?, 2003) Fixed various compiler warnings.
+\item[1.1.2] (Nov 16, 2003) Fixed various compiler warnings.
 \end{description}
 
 \end{document}
