notes for future refs

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.151 2003-11-16 07:08:20 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.152 2003-12-09 00:28:27 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -590,6 +590,10 @@ GL2PS does not support textures, fog effects, etc.
 %
 %    Not in the present release.  However, future releases may provide
 %    support for 1D texture maps (e.g. color lookup).
+%
+% Add references:
+% - Fuchs, Kedem and Naylor for the BSP
+% - Kilgard+OpenGL spec for the feedback buffer
 
 \section{Contributors}
 \label{sec:contrib}
