--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -1,4 +1,4 @@
-%  $Id: gl2ps.tex,v 1.154 2003-12-22 16:31:24 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.155 2004-02-14 16:10:34 geuzaine Exp $
 %
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003 Christophe Geuzaine <geuz@geuz.org>
@@ -244,7 +244,7 @@ determine the way primitives are handled:
   \dd{GL_COLOR_INDEX}. This colormap must contain \dd{colorsize} elements of
   type \dd{GL2PSrgba}.
 \item[\dd{nr}, \dd{ng}, \dd{nb}] (for PostScript output only) Controls the
-  number flat-shaded \mbox{(sub-)triangles} used to approximate a
+  number of flat-shaded \mbox{(sub-)triangles} used to approximate a
   smooth-shaded triangle when the \dd{shfill} operator is not supported by
   the system, or when the \dd{GL2PS_NO_PS3_SHADING} option is set. The
   arguments \dd{nr}, \dd{ng} and \dd{nb} specify the number of values used
